Fixed the button alignment

--- a/public/stylesheets/index.less
+++ b/public/stylesheets/index.less
@@ -29,6 +29,7 @@ body.home   #workspace { display: none;  }
 
 .button
 {
+    text-align: center;
     background-color: lighten(@codr-blue, 10%);
     text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.4);
     padding: 8px;
@@ -339,6 +340,7 @@ body.home   #workspace { display: none;  }
 
         #edit-button
         {
+            text-align: left;
             height: 30px;
             margin-left: 15px;
             margin-right: 14px;
@@ -346,7 +348,7 @@ body.home   #workspace { display: none;  }
             margin-top: 7px;            
             padding-top: 5px;
             padding-bottom: 0;
-            
+           
             [class^="icon-check"]
             {
                 font-size: 15pt;
